--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,35 @@
 *.pdf
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# os generated files #
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# compiled source #
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# packages #
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
